--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,4 @@
 
 @import "./utils/style/components/header";
 @import "./utils/style/components/banner";
+@import "./utils/style/components/footer";
