--- a/src/index.scss
+++ b/src/index.scss
@@ -6,4 +6,6 @@
 
 @import "./utils/style/components/header";
 @import "./utils/style/components/banner";
+@import "./utils/style/components/gallery";
+@import "./utils/style/components/card";
 @import "./utils/style/components/footer";
