--- a/src/utils/style/components/card.scss
+++ b/src/utils/style/components/card.scss
@@ -29,16 +29,8 @@
     opacity: 50%;
   }
 
-  &-background {
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    background: $color-primary;
-
-    &-image {
-      width: auto;
-      min-height: 340px;
-    }
+  &-background-image {
+    width: auto;
+    min-height: 340px;
   }
 }
