root page responsive done

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "./utils/style/base/typography";
 
 @import "./utils/style/utils/variables";
+@import "./utils/style/utils/mixin";
 
 @import "./utils/style/base/base";
 
