--- a/src/utils/style/components/banner.scss
+++ b/src/utils/style/components/banner.scss
@@ -10,13 +10,23 @@
   margin-top: 63px;
   overflow: hidden;
   background: #000;
+
+  @include md {
+    height: 111px;
+    margin-top: 16px;
+  }
 }
 
-.background-image {
+.banner-background-image {
   width: 100%;
   min-height: 223px;
   object-fit: cover;
   opacity: 0.7;
+
+  @include md {
+    min-height: 111px;
+    object-position: 50% 50%;
+  }
 }
 
 .hero {
@@ -26,4 +36,10 @@
   font-weight: 500;
   text-align: center;
   color: $white;
+
+  @include md {
+    margin-left: 16px;
+    font-size: 24px;
+    text-align: left;
+  }
 }
