--- a/src/utils/style/components/card.scss
+++ b/src/utils/style/components/card.scss
@@ -10,14 +10,23 @@
   align-items: flex-start;
   overflow: hidden;
 
+  @include md {
+    width: 335px;
+    height: 255px;
+    margin-bottom: 20px;
+  }
+
   &-title {
     position: absolute;
     z-index: 3;
-    width: 300px;
     margin: 20px;
     font-size: 18px;
     font-weight: 500;
     color: $white;
+
+    @include md {
+      margin-bottom: 15px;
+    }
   }
 
   &-gradient {
@@ -32,5 +41,9 @@
   &-background-image {
     width: auto;
     min-height: 340px;
+
+    @include md {
+      min-height: 255px;
+    }
   }
 }
