--- a/src/utils/style/components/header.scss
+++ b/src/utils/style/components/header.scss
@@ -7,12 +7,20 @@
 
 .logo-header {
   height: 68px;
+
+  @include md {
+    height: 47px;
+  }
 }
 
 .links-list {
   list-style: none;
   display: flex;
   padding-right: 50px;
+
+  @include md {
+    padding: 0;
+  }
 }
 
 .link {
@@ -21,6 +29,12 @@
   color: $color-primary;
   text-decoration: none;
   margin-left: 57px;
+
+  @include md {
+    font-size: 12px;
+    text-transform: uppercase;
+    margin-left: 10px;
+  }
 }
 
 .link-active {
