dropdown done - display issue to fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,5 +9,6 @@
 @import "./style/components/banner";
 @import "./style/components/gallery";
 @import "./style/components/card";
+@import "./style/components/dropdown";
 @import "./style/components/footer";
 @import "./style/components/error";
