--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,8 @@
 
 @import "./style/base/base";
 
+@import "./style/pages/about.scss";
+
 @import "./style/components/header";
 @import "./style/components/banner";
 @import "./style/components/gallery";
