--- a/src/style/components/dropdown.scss
+++ b/src/style/components/dropdown.scss
@@ -1,8 +1,12 @@
 .dropdown {
-  width: 1023px;
+  width: 82.5%;
   border-radius: 5px;
   margin-bottom: 31px;
-  height: 48px;
+
+  @include md {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 
   &-container {
     display: flex;
@@ -10,6 +14,10 @@
     justify-content: center;
     align-items: center;
     margin-top: 31px;
+
+    @include md {
+      margin-top: 19px;
+    }
   }
 
   &-header {
@@ -30,6 +38,12 @@
     background: $color-primary;
     border-radius: 5px;
     color: $white;
+
+    @include md {
+      height: 30px;
+      font-size: 13px;
+      padding-left: 11px;
+    }
   }
 
   &-icon {
@@ -40,6 +54,12 @@
     width: 32px;
     height: 32px;
     cursor: pointer;
+
+    @include md {
+      width: 19px;
+      height: 19px;
+      right: 5px;
+    }
 
     &-expand {
       background-image: url(../../assets/icons/expand.svg);
@@ -58,5 +78,10 @@
     font-weight: 400;
     background: $gray-lighter;
     color: $color-primary;
+
+    @include md {
+      padding: 23px 7px 52px 11px;
+      font-size: 12px;
+    }
   }
 }
