--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@
 @import "./style/components/gallery";
 @import "./style/components/card";
 @import "./style/components/dropdown";
+@import "./style/components/slideshow";
 @import "./style/components/host";
 @import "./style/components/rating";
 @import "./style/components/tag";
