--- a/src/style/components/slideshow.scss
+++ b/src/style/components/slideshow.scss
@@ -47,4 +47,20 @@
       top: calc(50% - 10px);
     }
   }
+
+  &-counter {
+    z-index: 1;
+    position: absolute;
+    bottom: 25px;
+    margin: 0 auto;
+    width: 100%;
+    color: $white;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+
+    @include md {
+      display: none;
+    }
+  }
 }
